# agricite-fastapi-backend

./: .gitignore  README.Md  db.sqlite3  pyproject.toml
app/: config.py  main.py  models.py  routes.py
app/api/v1/endpoints/: quiz.py  todos.py
app/core/: config.py  cors.py
app/db/: init_db.py  models.py
app/schemas/: schemas.py  todos.py
app/tests/: test_todos.py
