[tool.poetry]
name = "fastapi-tortoise"
version = "0.1.0"
description = "FastAPI with Tortoise ORM and PostgreSQL"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.5"
tortoise-orm = "^0.22.0"
uvicorn = "^0.32.0"
psycopg2 = "^2.9.10"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
